--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,10 @@
     transform: rotate(360deg);
   }
 }
+
+.peeps{
+  display: flex;
+  border: 3px solid #282c34;
+  justify-content: space-evenly;
+  text-align-last: left;
+}
