--- a/src/User.css
+++ b/src/User.css
@@ -68,10 +68,10 @@ p{
     border-radius: 50px;
     color: rgba(7, 7, 7, 0.789);
 }
-.btn{
+button{
     width: 150%;
     height: 5vh;
-    background-color: rgb(70,157,164);
+    /* background-color: crimson; */
     border: none;
     color: white;
     font-size: 1.2em;
